# anime-snake-arena

./: .dockerignore  .env.render.example  AGENTS.md  API_README.md  DEPLOYMENT.md  Dockerfile  README.md  README.render.md  RENDER_CHECKLIST.md  RENDER_DEPLOY.md  RENDER_FREE_TIER.md  docker-compose.deploy.yml  docker-compose.yml  index.html  nginx-deployment.conf  openapi.yaml  package-lock.json  package.json  render.yaml  supervisord.conf
.agent/workflows/: testing.md
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/database/: database.py  mock_db.py  models.py
backend/app/models/: auth.py  game.py  user.py
backend/app/routers/: auth.py  avatars.py  games.py  leaderboard.py  live_games.py  users.py
backend/app/services/: auth_service.py  db_service.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_leaderboard.py  test_live_games.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/__tests__/: mockApi.test.ts  snakeLogic.test.ts
frontend/src/components/: GameCanvas.tsx  GameControls.tsx  Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/game/: snakeLogic.ts
frontend/src/pages/: AuthPage.tsx  Index.tsx  (+2 more)
src/: App.tsx
src/__tests__/: mockApi.test.ts  snakeLogic.test.ts
src/components/: Navbar.tsx
src/game/: snakeLogic.test.ts
src/pages/: LeaderboardPage.tsx  PlayPage.tsx  WatchPage.tsx
src/services/: mockApi.ts
(+1 files in other folders)
